- [#779] Add more roll paper size templates.
- [#783] Flipping control.
- [#790] Generate unique name for each detail.
- [#792] New feature. Visibility trigger for internal path.
- New internal variable RotationElArc.
- [#794] Better control over scale value.
- [#392] Improve feature: Show progress bar while opening pattern file.
- [#732] Tape app. Improve Database dialog.

# Version 0.5.1
- [#683] Tool Seam allowance's dialog is off screen on small resolutions.
- [#686] Seam allowance not placed correctly.
- [#687] Wrong seam allowance.
- [#689] Grainline default values swapped around.
- [#688] Difficult to enter numbers in Tape.
- Fixed bug in Tape app. Tape showed birth date in wrong locale.
- Fixed bug in dialog Internal Piece Path. Value from the field After rewrited data in the field Before.
- Tab Pins moved to be second in the list after tab Paths. 
- Added tooltip for tab Passmark. Explained meaning of check box "Show the second passmark on seam line". 
- [#696] Wrong grainline position on layout.
- [#697] Incomplete Internal Path for Waist Dart.
- [#698] Problem typing in new axis point for new piece.
- [#702] Valentina produces broken shortcut (.lnk) files on Windows.
- Changed default behaviour if path to multisize measurements or templates doesn't exist. 
- [#703] Valentina warns about format rewriting for unsaved files.
- [#704] Valentina crashes if click on detail.
- [#706] Default unit in preferences not changing new file unit.
- Fix bug. Valentina overrids exported file even if a user said no.
- Fix bug. Date on label doesn't obey GUI language locale.
- Tool Seam allowance's bounding box should not include passmarks.
- Fix grainline position on layout.
- [#719] Valentina crashes when unite pieces.
- Fixed Valentina crash. Used way to avoid Qt's bug QTBUG-61213.
- Fixed behaviour on Windows. Valentina asks about synchronization measurements twice.
- Fixed bug. Tape app saved default size value in wrong place.