@@ -43,6 +43,7 @@ public:
 
     bool MeasurementsFromUser(QString &newFormula, int position, const QString &token, int &bias) const;
 
+    QString MFromUser(const QString &measurement) const;
     QString MToUser(const QString &measurement) const;
     QString MNumber(const QString &measurement) const;
     QString MFormula(const QString &measurement) const;
